Revert "removed fixed height to prevent overflowing of boxes"
This reverts commit 6bae104083ad2040869292471ab60d7ea9e68083.

Sorry, but this breaks the layout ... We'll have to find another fix for

--- a/templates/stylesheets/base.sass
+++ b/templates/stylesheets/base.sass
@@ -86,6 +86,7 @@ a, a:visited
   position: relative
   float: left
   width: 360px
+  height: 250px
   margin-right: 40px
   margin-bottom: 20px
   min-height: 220px
